syntax = "proto3";

option go_package = "proto/blogs";

import "google/protobuf/empty.proto";


service BlogService {
    rpc GetBlogById (GetBlogByIdRequest) returns (GetBlogByIdResponse);
    rpc GetAllBlogs (google.protobuf.Empty) returns (GetAllBlogsResponse);
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse);
}

message Blog {
    string id = 1;
    string title = 2;
    string description = 3;
    string date_created = 4;
    string status = 5;
    repeated Picture pictures = 6;
}

message Picture {
    string url = 1;
}

message GetBlogByIdRequest {
    string id = 1;
}

message GetBlogByIdResponse {
    Blog blog = 1;
}


message GetAllBlogsResponse {
    repeated Blog blogs = 1;
}

message CreateBlogRequest {
    string title = 1;
    string description = 2;
    string date_created = 3;
    string status = 4;
    repeated Picture pictures = 5;
}

message CreateBlogResponse {
    Blog blog = 1;
}
